--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,49 +5,30 @@ authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
 edition = "2018"
 
 [dependencies.base64]
-version = "0.10.1"
-
-[dependencies.brotli]
-version = "3.3.0"
+version = "0.11.0"
 
 [dependencies.chrono]
-version = "0.4.6"
+version = "0.4.10"
 features = ["serde"]
 
-[dependencies.deflate]
-version = "0.7.20"
-features = ["gzip"]
-
 [dependencies.diesel]
-version = "1.4.2"
-features = ["postgres", "chrono", "network-address", "uuid"]
+version = "1.4.3"
+features = ["postgres", "chrono", "uuid"]
 
 [dependencies.dotenv]
-version = "0.13.0"
-
-[dependencies.ipnetwork]
-version = "0.13.0"
-
-[dependencies.jsonwebtoken]
-version = "5.0.1"
-
-[dependencies.lazy_static]
-version = "1.3.0"
+version = "0.15.0"
 
 [dependencies.log]
-version = "0.4.6"
+version = "0.4.8"
 
 [dependencies.r2d2]
-version = "0.8.4"
+version = "0.8.8"
 
 [dependencies.r2d2-diesel]
 version = "1.0"
 
-[dependencies.rand]
-version = "0.6.5"
-
 [dependencies.regex]
-version = "1.1.3"
+version = "1.3.3"
 
 [dependencies.rocket_contrib]
 version = "0.4.2"
@@ -59,19 +40,16 @@ version = "0.4.2"
 default-features = false
 
 [dependencies.sha2]
-version = "0.8.0"
+version = "0.8.1"
 
 [dependencies.serde]
-version = "1.0.90"
+version = "1.0.104"
 
 [dependencies.serde_derive]
-version = "1.0.90"
+version = "1.0.104"
 
 [dependencies.serde_json]
-version = "1.0.39"
-
-[dependencies.tempfile]
-version = "3.1.0"
+version = "1.0.44"
 
 [dependencies.time]
 version = "0.1.42"
@@ -79,12 +57,6 @@ version = "0.1.42"
 [dependencies.uuid]
 version = "0.6.5"
 features = ["serde", "v4"]
-
-[dependencies.zstd]
-version = "0.4.27"
-
-[dependencies.zstd-safe]
-version = "1.4.3"
 
 # Settings for optimal performance and longest build time
 [profile.release]
