--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -11,7 +11,7 @@ before_script:
   - pwd
   - ls -lah
 
-compile:
+test:
   image: rust:1.34.0-stretch
   stage: compile
   script:
@@ -22,6 +22,21 @@ compile:
      - rustup default nightly-2019-12-16
      - which cargo
      - cargo test --locked
+  cache:
+    paths:
+      - target
+      - usr/local/cargo
+
+compile:
+  image: rust:1.34.0-stretch
+  stage: compile
+  script:
+     - export CARGO_HOME=`pwd`/usr/local/cargo
+     - export RUSTUP_HOME=`pwd`/usr/local/rustup
+     - export PATH=$CARGO_HOME/bin:$RUSTUP_HOME/bin:$PATH
+     - mkdir -p $CARGO_HOME $RUSTUP_HOME
+     - rustup default nightly-2019-12-16
+     - which cargo
      - cargo build --locked --release
      - mkdir -p bin
      - mv target/release/mqs bin
