--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [dependencies.base64]
 version = "0.11.0"
 
+[dependencies.cached]
+version = "0.11.0"
+
 [dependencies.chrono]
 version = "0.4.10"
 features = ["serde"]
@@ -36,15 +39,6 @@ version = "1.0"
 
 [dependencies.regex]
 version = "1.3.3"
-
-[dependencies.rocket_contrib]
-version = "0.4.2"
-default-features = false
-features = ["json", "diesel_postgres_pool"]
-
-[dependencies.rocket]
-version = "0.4.2"
-default-features = false
 
 [dependencies.sha2]
 version = "0.8.1"
