--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     environment:
       ENV: dev
       DATABASE_URL: postgres://root:6f55ceed83f286e23fbd1ae3323ab5704867a716e0bb6cb0c7d8e026805729b9@postgres/test
-      POOL_SIZE: 25
+      MAX_POOL_SIZE: 25
     expose:
     - 7843
     networks:
