--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
 edition = "2018"
 
+[dependencies.async-trait]
+version = "0.1.26"
+
 [dependencies.base64]
 version = "0.11.0"
 
@@ -25,7 +28,7 @@ version = "0.15.0"
 version = "0.13"
 
 [dependencies.tokio]
-version = "0.2.10"
+version = "0.2.13"
 features = ["full"]
 
 [dependencies.log]
