--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,10 @@ test:
      - which cargo
      - cargo test --locked
   cache:
+    key: test
     paths:
       - target
-      - usr/local/cargo
+      - usr/local
 
 compile:
   image: rust:1.34.0-stretch
@@ -52,9 +53,10 @@ compile:
     - bin/diesel
     expire_in: 1 week
   cache:
+    key: compile
     paths:
       - target
-      - usr/local/cargo
+      - usr/local
 
 .template:image:
   stage: image
@@ -83,7 +85,9 @@ benchmark:
     - apk update
     - apk add docker-compose
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - docker-compose --project-name "mqs-benchmark-$CI_JOB_ID" up --detach postgres mqs
+    - docker-compose --project-name "mqs-benchmark-$CI_JOB_ID" up --detach postgres
+    - sleep 20
+    - docker-compose --project-name "mqs-benchmark-$CI_JOB_ID" up --detach mqs
   after_script:
     - docker-compose --project-name "mqs-benchmark-$CI_JOB_ID" down
   script:
