--- a/Dockerfile.service
+++ b/Dockerfile.service
@@ -1,24 +1,26 @@
 FROM debian:stretch
 
+ARG app
+
 RUN ((groupadd -r www-data && useradd -r -g www-data www-data) || true) && \
     apt-get update && \
     apt-get upgrade -yy && \
     apt-get install -yy libpq5 libsqlite3-0 libmariadbclient18 && \
     apt-get autoremove && \
     rm -rf /var/lib/apt/lists/* && \
-    mkdir -p /var/lib/mqs && \
-    chown -R www-data:www-data /var/lib/mqs
+    mkdir -p /var/lib/app && \
+    chown -R www-data:www-data /var/lib/app
 
 COPY docker-healthcheck /usr/local/bin/
 
 HEALTHCHECK --interval=30s --timeout=3s CMD ["docker-healthcheck"]
 
-WORKDIR /var/lib/mqs
+WORKDIR /var/lib/app
 
-CMD /usr/local/bin/diesel migration run && exec /usr/local/bin/mqs
+CMD /usr/local/bin/diesel migration run && exec /usr/local/bin/app
 
 COPY ./bin/diesel /usr/local/bin/diesel
 COPY ./migrations ./migrations
-COPY ./bin/mqs /usr/local/bin/mqs
+COPY ./bin/${app} /usr/local/bin/app
 
 USER www-data:www-data
