--- a/Dockerfile.service
+++ b/Dockerfile.service
@@ -20,7 +20,7 @@ WORKDIR /var/lib/app
 CMD /usr/local/bin/diesel migration run && exec /usr/local/bin/app
 
 COPY ./bin/diesel /usr/local/bin/diesel
-COPY ./migrations ./migrations
+COPY ./server/migrations ./migrations
 COPY ./bin/${app} /usr/local/bin/app
 
 USER www-data:www-data
