--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -18,5 +18,5 @@ use_try_shorthand = true
 wrap_comments = true
 comment_width = 120
 ignore = [
-    "src/schema.rs",
+    "server/src/schema.rs",
 ]
