refs #16: updated dependencies and compiler versions;

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,15 +8,18 @@ stages:
 - benchmark
 - publish
 
+variables:
+  RUST_VERSION: nightly-2020-04-20
+
 test:
   image: rust:1.34.0-stretch
   stage: compile
   script:
-     - export CARGO_HOME=`pwd`/usr/local/cargo
-     - export RUSTUP_HOME=`pwd`/usr/local/rustup
-     - export PATH=$CARGO_HOME/bin:$RUSTUP_HOME/bin:$PATH
-     - mkdir -p $CARGO_HOME $RUSTUP_HOME
-     - rustup default nightly-2019-12-16
+     - export CARGO_HOME="$(pwd)/usr/local/cargo"
+     - export RUSTUP_HOME="$(pwd)/usr/local/rustup"
+     - export PATH="$CARGO_HOME/bin:$RUSTUP_HOME/bin:$PATH"
+     - mkdir -p "$CARGO_HOME" "$RUSTUP_HOME"
+     - rustup default "$RUST_VERSION"
      - which cargo
      - cargo test --locked
   cache:
@@ -29,11 +32,11 @@ compile:
   image: rust:1.34.0-stretch
   stage: compile
   script:
-     - export CARGO_HOME=`pwd`/usr/local/cargo
-     - export RUSTUP_HOME=`pwd`/usr/local/rustup
-     - export PATH=$CARGO_HOME/bin:$RUSTUP_HOME/bin:$PATH
-     - mkdir -p $CARGO_HOME $RUSTUP_HOME
-     - rustup default nightly-2019-12-16
+     - export CARGO_HOME="$(pwd)/usr/local/cargo"
+     - export RUSTUP_HOME="$(pwd)/usr/local/rustup"
+     - export PATH="$CARGO_HOME/bin:$RUSTUP_HOME/bin:$PATH"
+     - mkdir -p "$CARGO_HOME" "$RUSTUP_HOME"
+     - rustup default "$RUST_VERSION"
      - which cargo
      - cargo build --locked --release
      - mkdir -p bin
@@ -62,8 +65,8 @@ compile:
   stage: image
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - docker build --tag $IMAGE_NAME --file $DOCKERFILE --build-arg="app=$APPLICATION" .
-    - docker push $IMAGE_NAME
+    - docker build --tag "$IMAGE_NAME" --file "$DOCKERFILE" --build-arg="app=$APPLICATION" .
+    - docker push "$IMAGE_NAME"
   dependencies:
     - compile
 
