refs #17: refactored directory layout for submodule inclusion;

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [workspace]
 
 members = [
-    "bench",
-    "client",
-    "common",
-    "server",
+    "mqs-bench",
+    "mqs-client",
+    "mqs-common",
+    "mqs-server",
 ]
 
 # Settings for optimal performance and longest build time
