--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,6 +9,7 @@ stages:
 - publish
 
 variables:
+  # 1.43.0, but we still need the nightly channel for most of our cargo fmt options
   RUST_VERSION: nightly-2020-04-20
 
 test:
@@ -65,7 +66,7 @@ compile:
   stage: image
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
-    - docker build --tag "$IMAGE_NAME" --file "$DOCKERFILE" --build-arg="app=$APPLICATION" .
+    - docker build --tag "$IMAGE_NAME" --file "$DOCKERFILE" --build-arg="app=$APPLICATION" --build-arg="appDir=$APPLICATION_DIR" .
     - docker push "$IMAGE_NAME"
   dependencies:
     - compile
@@ -75,6 +76,7 @@ mqs:image:
   variables:
     IMAGE_NAME: $CI_REGISTRY_IMAGE/mqs:$CI_COMMIT_REF_NAME
     APPLICATION: mqs
+    APPLICATION_DIR: mqs-server
     DOCKERFILE: Dockerfile.service
 
 bench:image:
