--- a/mqs-client/Cargo.toml
+++ b/mqs-client/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
 edition = "2018"
 
 [dependencies.mqs-common]
-path = "../common"
+path = "../mqs-common"
 
 [dependencies.hyper]
 version = "0.13"
