--- a/mqs-bench/Cargo.toml
+++ b/mqs-bench/Cargo.toml
@@ -28,7 +28,11 @@ version = "0.13"
 
 [dependencies.tokio]
 version = "0.2.13"
-features = ["full"]
+features = ["rt-core", "rt-threaded", "rt-util", "sync", "blocking", "tcp", "time"]
 
 [dependencies.log]
 version = "0.4.8"
+
+[dependencies.uuid]
+version = "0.8.1"
+features = ["serde", "v4"]
