--- a/mqs-client/Cargo.toml
+++ b/mqs-client/Cargo.toml
@@ -15,3 +15,7 @@ version = "1.0.106"
 
 [dependencies.serde_json]
 version = "1.0.44"
+
+[dependencies.uuid]
+version = "0.8.1"
+features = ["serde", "v4"]
