--- a/mqs-client/Cargo.toml
+++ b/mqs-client/Cargo.toml
@@ -19,3 +19,7 @@ version = "1.0.44"
 [dependencies.uuid]
 version = "0.8.1"
 features = ["serde", "v4"]
+
+[dependencies.tokio]
+version = "0.2.13"
+features = ["rt-core", "rt-threaded", "rt-util", "sync", "blocking", "tcp", "time"]
