--- a/mqs-common/Cargo.toml
+++ b/mqs-common/Cargo.toml
@@ -11,6 +11,9 @@ version = "0.1.26"
 version = "0.4.10"
 features = ["serde"]
 
+[dependencies.http]
+version = "0.2.1"
+
 [dependencies.hyper]
 version = "0.13"
 
