--- a/mqs-common/Cargo.toml
+++ b/mqs-common/Cargo.toml
@@ -5,34 +5,34 @@ authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
 edition = "2018"
 
 [dependencies.async-trait]
-version = "0.1.26"
+version = "0.1.51"
 
 [dependencies.chrono]
-version = "0.4.10"
+version = "0.4.19"
 features = ["serde"]
 
 [dependencies.http]
-version = "0.2.1"
+version = "0.2.4"
 
 [dependencies.hyper]
-version = "0.13"
+version = "=0.14.4"
 
 [dependencies.log]
-version = "0.4.8"
+version = "0.4.14"
 
 [dependencies.serde]
-version = "1.0.106"
+version = "1.0.127"
 
 [dependencies.serde_derive]
-version = "1.0.106"
+version = "1.0.127"
 
 [dependencies.serde_json]
-version = "1.0.52"
+version = "1.0.66"
 
 [dependencies.tokio]
-version = "0.2.20"
-features = ["rt-core", "rt-threaded", "rt-util", "sync", "blocking", "tcp", "time"]
+version = "1.9.0"
+features = ["rt", "rt-multi-thread", "sync", "net", "time"]
 
 [dependencies.uuid]
-version = "0.8.1"
+version = "0.8.2"
 features = ["serde", "v4"]
