--- a/mqs-bench/Cargo.toml
+++ b/mqs-bench/Cargo.toml
@@ -14,25 +14,25 @@ path = "../mqs-client"
 path = "../mqs-server"
 
 [dependencies.cached]
-version = "0.12.0"
+version = "0.24.0"
 
 [dependencies.chrono]
-version = "0.4.10"
+version = "0.4.19"
 features = []
 
 [dependencies.dotenv]
 version = "0.15.0"
 
 [dependencies.hyper]
-version = "0.13"
+version = "=0.14.4"
 
 [dependencies.tokio]
-version = "0.2.20"
-features = ["rt-core", "rt-threaded", "rt-util", "sync", "blocking", "tcp", "time"]
+version = "1.9.0"
+features = ["rt", "rt-multi-thread", "sync", "net", "time"]
 
 [dependencies.log]
-version = "0.4.8"
+version = "0.4.14"
 
 [dependencies.uuid]
-version = "0.8.1"
+version = "0.8.2"
 features = ["serde", "v4"]
