--- a/mqs-client/Cargo.toml
+++ b/mqs-client/Cargo.toml
@@ -8,18 +8,19 @@ edition = "2018"
 path = "../mqs-common"
 
 [dependencies.hyper]
-version = "0.13"
+version = "=0.14.4"
+features = ["client", "http1", "http2", "runtime"]
 
 [dependencies.serde]
-version = "1.0.106"
+version = "1.0.127"
 
 [dependencies.serde_json]
-version = "1.0.52"
+version = "1.0.66"
 
 [dependencies.uuid]
-version = "0.8.1"
+version = "0.8.2"
 features = ["serde", "v4"]
 
 [dependencies.tokio]
-version = "0.2.20"
-features = ["rt-core", "rt-threaded", "rt-util", "sync", "blocking", "tcp", "time"]
+version = "1.9.0"
+features = ["rt", "rt-multi-thread", "sync", "net", "time"]
