--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -5,7 +5,7 @@ format_strings = false
 imports_layout = "HorizontalVertical"
 match_block_trailing_comma = true
 max_width = 120
-merge_imports = true
+imports_granularity = "Crate"
 normalize_comments = true
 normalize_doc_attributes = true
 overflow_delimited_expr = true
