--- a/mqs-cli/Cargo.toml
+++ b/mqs-cli/Cargo.toml
@@ -13,6 +13,9 @@ path = "../mqs-client"
 [dependencies.base64]
 version = "0.13.0"
 
+[dependencies.chrono]
+version = "0.4.19"
+
 [dependencies.serde]
 version = "1.0.127"
 
