--- a/mqs-client/Cargo.toml
+++ b/mqs-client/Cargo.toml
@@ -7,6 +7,9 @@ edition = "2018"
 [dependencies.mqs-common]
 path = "../mqs-common"
 
+[dependencies.chrono]
+version = "0.4.19"
+
 [dependencies.hyper]
 version = "=0.14.4"
 features = ["client", "http1", "http2", "runtime"]
