--- a/mqs-cli/Cargo.toml
+++ b/mqs-cli/Cargo.toml
@@ -13,22 +13,19 @@ path = "../mqs-client"
 [dependencies.base64]
 version = "0.13.0"
 
-[dependencies.chrono]
-version = "0.4.19"
-
 [dependencies.serde]
-version = "1.0.127"
+version = "1.0.136"
 
 [dependencies.serde_derive]
-version = "1.0.127"
+version = "1.0.136"
 
 [dependencies.serde_json]
-version = "1.0.66"
+version = "1.0.79"
 
 [dependencies.uuid]
 version = "0.8.2"
 features = ["serde", "v4"]
 
 [dependencies.tokio]
-version = "1.9.0"
-features = ["rt", "rt-multi-thread", "sync", "net", "time"]
+version = "1.17.0"
+features = ["rt", "rt-multi-thread", "sync", "net", "time", "signal"]
