--- a/mqs-common/Cargo.toml
+++ b/mqs-common/Cargo.toml
@@ -15,6 +15,10 @@ version = "1.4.8"
 features = ["postgres"]
 optional = true
 
+[dependencies.dotenv]
+version = "0.15.0"
+optional = true
+
 [dependencies.http]
 version = "0.2.6"
 
@@ -23,6 +27,14 @@ version = "=0.14.18"
 
 [dependencies.log]
 version = "0.4.16"
+
+[dependencies.r2d2]
+version = "0.8.9"
+optional = true
+
+[dependencies.r2d2-diesel]
+version = "1.0.0"
+optional = true
 
 [dependencies.serde]
 version = "1.0.136"
@@ -44,3 +56,6 @@ features = ["rt", "rt-multi-thread", "sync", "net", "time", "signal"]
 [dependencies.uuid]
 version = "0.8.2"
 features = ["serde", "v4"]
+
+[features]
+server = ["dotenv", "r2d2", "r2d2-diesel"]
