--- a/mqs-common/Cargo.toml
+++ b/mqs-common/Cargo.toml
@@ -5,14 +5,17 @@ authors = ["Jonas Scholl <jonas.scholl@lingumatiker.de>"]
 edition = "2018"
 
 [dependencies.async-trait]
-version = "0.1.53"
+version = "0.1.60"
+
+[dependencies.byteorder]
+version = "1.4.3"
 
 [dependencies.cached]
-version = "0.34.0"
+version = "0.41.0"
 
 [dependencies.diesel]
-version = "1.4.8"
-features = ["postgres"]
+version = "2.0.2"
+features = ["postgres", "r2d2"]
 optional = true
 
 [dependencies.dotenv]
@@ -20,42 +23,39 @@ version = "0.15.0"
 optional = true
 
 [dependencies.http]
-version = "0.2.6"
+version = "0.2.8"
 
 [dependencies.hyper]
-version = "=0.14.18"
+version = "=0.14.22"
+features = ["server", "http1", "http2", "runtime"]
 
 [dependencies.log]
-version = "0.4.16"
+version = "0.4.17"
 
 [dependencies.r2d2]
-version = "0.8.9"
-optional = true
-
-[dependencies.r2d2-diesel]
-version = "1.0.0"
+version = "0.8.10"
 optional = true
 
 [dependencies.serde]
-version = "1.0.136"
+version = "1.0.152"
 
 [dependencies.serde_derive]
-version = "1.0.136"
+version = "1.0.152"
 
 [dependencies.serde_json]
-version = "1.0.79"
+version = "1.0.91"
 
 [dependencies.time]
-version = "0.3.9"
+version = "0.3.17"
 features = ["serde"]
 
 [dependencies.tokio]
-version = "1.17.0"
+version = "1.23.0"
 features = ["rt", "rt-multi-thread", "sync", "net", "time", "signal"]
 
 [dependencies.uuid]
-version = "0.8.2"
+version = "1.2.2"
 features = ["serde", "v4"]
 
 [features]
-server = ["dotenv", "r2d2", "r2d2-diesel"]
+server = ["dotenv", "r2d2"]
